--- a/app/db/seeds/calendar_seeds.yml
+++ b/app/db/seeds/calendar_seeds.yml
@@ -2,8 +2,8 @@
 - title: 'buy cookies'
   description: 'Good1'
   event_start_at: '2019-04-20 12:13:40'
-  event_end_date: '2019-05-01 10:00:00'
+  event_end_at: '2019-05-01 10:00:00'
 - title: 'buy candies'
   description: 'Good2'
   event_start_at: '2019-04-19 12:13:50'
-  event_end_date: '2019-05-01 10:00:10'
+  event_end_at: '2019-05-01 10:00:10'
