--- a/app/db/seeds/group_seeds.yml
+++ b/app/db/seeds/group_seeds.yml
@@ -13,3 +13,10 @@
   due_at: '2019-04-22 12:13:40'
   event_start_at: '2019-04-21 12:13:40'
   event_end_at: '2019-05-02 10:00:00'
+- title: 'sell anything'
+  description: 'Gd3'
+  member_id: 'KT, KK'
+  limit_number: 3
+  due_at: '2019-04-12 12:13:40'
+  event_start_at: '2019-04-25 12:13:40'
+  event_end_at: '2019-05-03 10:00:00'
