--- a/app/db/seeds/calendar_seeds.yml
+++ b/app/db/seeds/calendar_seeds.yml
@@ -7,3 +7,7 @@
   description: 'Good2'
   event_start_at: '2019-04-19 12:13:50'
   event_end_at: '2019-05-01 10:00:10'
+- title: 'buy anything'
+  description: 'Good3'
+  event_start_at: '2019-04-19 12:11:50'
+  event_end_at: '2019-05-02 10:00:10'
