--- a/app/db/seeds/owners_calendars.yml
+++ b/app/db/seeds/owners_calendars.yml
@@ -1,8 +1,8 @@
 ---
-  - username: 'JeffHsu'
+  - name: 'JeffHsu'
     cal_name:
       - 'buy cookies'
-  - username: 'KevinYang'
+  - name: 'KevinYang'
     cal_name:
       - 'buy candies'
       - 'buy anything'
