--- a/app/db/seeds/group_seeds.yml
+++ b/app/db/seeds/group_seeds.yml
@@ -5,7 +5,7 @@
   due_at: '2019-04-21 12:13:40'
   event_start_at: '2019-04-20 12:13:40'
   event_end_at: '2019-05-01 10:00:00'
-- title: 'cc'
+- title: 'sell candies'
   description: 'Gd2'
   limit_number: 3
   due_at: '2019-04-22 12:13:40'
