TimeMatching test file

--- a/app/db/seeds/calendar_seeds.yml
+++ b/app/db/seeds/calendar_seeds.yml
@@ -1,13 +1,41 @@
 ---
-- title: 'buy cookies'
+- title: 'buy cookies0'
   description: 'Good1'
   event_start_at: '2019-05-25T10:00:00+08:00'
   event_end_at: '2019-05-26T10:00:00+08:00'
-- title: 'buy candies'
-  description: 'Good2'
-  event_start_at: '2019-05-21T10:00:00+08:00'
-  event_end_at: '2019-05-22T10:00:00+08:00'
-- title: 'buy anything'
+- title: 'buy anything1'
   description: 'Good3'
   event_start_at: '2019-04-25T10:00:00+08:00'
   event_end_at: '2019-04-25T13:00:00+08:00'
+- title: 'buy something2'
+  description: 'Good3'
+  event_start_at: '2019-05-28T10:00:00+08:00'
+  event_end_at: '2019-05-29T13:00:00+08:00'
+- title: 'buy nothing3'
+  description: 'Good3'
+  event_start_at: '2019-03-28T10:00:00+08:00'
+  event_end_at: '2019-03-29T13:00:00+08:00'
+- title: 'buy cookies04'
+  description: 'Good3'
+  event_start_at: '2019-05-25T10:00:00+08:00'
+  event_end_at: '2019-05-26T10:00:00+08:00'
+- title: 'sell candies5'
+  description: 'Good2'
+  event_start_at: '2019-05-21T10:00:00+08:00'
+  event_end_at: '2019-05-22T10:00:00+08:00'
+- title: 'sell candies56'
+  description: 'Good2'
+  event_start_at: '2019-05-21T10:00:00+08:00'
+  event_end_at: '2019-05-22T10:00:00+08:00'
+- title: 'sell cookies7'
+  description: 'Good2'
+  event_start_at: '2019-05-25T10:00:00+08:00'
+  event_end_at: '2019-05-28T10:00:00+08:00'
+- title: 'sell cookies8'
+  description: 'Good2'
+  event_start_at: '2019-04-20T12:13:40+08:00'
+  event_end_at: '2019-05-28T10:00:00+08:00'
+- title: 'sell cookies9'
+  description: 'Good2'
+  event_start_at: '2019-04-19T12:13:40+08:00'
+  event_end_at: '2019-04-30T10:00:00+08:00'
